# pentagame-rust

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile  README.md  game.kra  secret.key
.github/ISSUE_TEMPLATE/: bug_report.md
.github/ci/: ci.toml
.github/workflows/: rust.yml
ci/: ci.toml
logic/: Cargo.toml  package.json  webpack.config.js
logic-non-webpack/: Cargo.toml
logic-non-webpack/src/: graph.rs  lib.rs  wasm.rs
logic/js/: game-join.js  main.js  pentagame.js
logic/src/: graph.rs  lib.rs  models.rs  wasm.rs
migrations/2020-11-07-172542_create-users/: up.sql
migrations/2020-11-07-172549_create-games/: down.sql
migrations/2020-11-07-213223_add-game-states/: up.sql
migrations/2020-11-07-220233_add-moves/: down.sql
scripts/: ci.sh  compile.sh  diesel.sh  full-setup.sh  server-setup.sh  setup.sh
server/: Cargo.toml  Makefile  README.md
server/logic/: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
server/logic/js/: game.js  pentagame.js
server/logic/src/: errors.rs  graph.rs  iterators.rs  lib.rs  models.rs  wasm.rs
server/migrations/00000000000000_diesel_initial_setup/: up.sql
server/migrations/2020-11-07-172542_create-users/: up.sql
server/migrations/2020-11-07-172549_create-games/: down.sql  up.sql
server/migrations/2020-11-07-213223_add-game-states/: down.sql  up.sql
server/migrations/2020-11-07-220233_add-moves/: down.sql  up.sql
server/migrations/2020-11-19-195649_add-games-public-flag/: down.sql  up.sql
server/migrations/2020-11-25-193134_ensure-game-ids-start-with-1/: down.sql  up.sql
server/migrations/2020-12-04-191939_add-user-alerts/: up.sql
server/migrations/2020-12-20-122313_add-game-icon/: down.sql  up.sql
server/server/static/js/: game-join.js  game.js  index.js
server/src/: api.rs  auth.rs  config.rs  db.rs  frontend.rs  graph.rs  main.rs  server.rs  ws.rs
server/src/api/: README.md  errors.rs  requests.rs  responses.rs  routes.rs  ws.rs  ws_session.rs
server/src/db/: README.md  actions.rs  helper.rs  model.rs  schema.rs
server/src/frontend/: errors.rs  forms.rs  helper.rs  routes.rs  templates.rs
server/src/graph/: errors.rs  graph.rs  models.rs
server/src/ws/: actor.rs  errors.rs  routes.rs  session.rs
server/static/: .gitignore  package-lock.json  package.json  purgecss.config.js  webpack.config.js  webpack.prod.config.js
server/static/css/: app.css  app.css.map
server/static/images/: README.md
server/static/js/: alert.js  core.js  game.js  main.js  pentagame.js  settings.js  utils.js
server/static/old-scss/: pentagame.scss  variables.scss
server/static/scss/: color.scss  layout.scss  main.scss  variables.scss
server/static/wasm-js/: 1.js  index.js
server/templates/: base.html  error.html  index.html  rules.html
server/templates/content/: cookies.html  rules.html
server/templates/games/: board.html  create.html  game.html  overview.html  view.html
server/templates/users/: login.html  register.html  settings.html  view.html
src/: api.rs  auth.rs  config.rs  db.rs  frontend.rs  logic.rs  main.rs  server.rs
src/api/: errors.rs
src/api-o/: README.md
src/db/: helper.rs  model.rs  pagination.rs  schema.rs
src/frontend/: routes.rs  templates.rs
src/logic/: board.rs
static/: package.json
static/css/: app.css  app.css.map
static/scss/: color.scss  icons.scss  main.scss  variables.scss
templates/: base.html  error.html  index.html  rules.html
