[package]
name = "pentagame-logic"
version = "0.1.0"
authors = ["Cobalt <Chaosthe0rie@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
graphlib = "^0.6"
serde = { version = "1.0", features = ["derive"], default-features = false }
