[package]
name = "pentagame"
version = "0.1.0"
authors = ["Cobalt <Chaosthe0rie@protonmail.com>"]
edition = "2018"


# Yeet those release compile times
[profile.release]
lto = true
linker = "lld"
codegen-units = 1


[dependencies]
actix = "0.10"
actix-identity = "0.3.1"
actix-files = "0.4.0"
actix-web = { version = "3", default-features = false, features = ["compress", "secure-cookies"] }
actix-redis = "0.9.1"
actix-web-actors = "3"
askama = { version = "0.10", default-features = false, features = [
    "with-actix-web",
    "mime",
    "mime_guess",
] }
askama_actix = "0.11.1"
cached = "~0.20"
chrono = "0.4.19"
clap = "2.33.3"
derive_more = "0.99.11"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuid", "chrono"] }
futures = "0.3.6"
hashbrown = { version = "0.9.1", features = ["serde", "inline-more", "rayon"] }
lazy_static = "1.4"
rand = "0.7.3"
r2d2 = "0.8.9"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "^1.0"
sodiumoxide = "0.2.6"
toml = "0.5.7"
time = "0.2.22"
uuid = { version = ">=0.2.0, <0.7.0", features = ["serde", "v4"] }
rayon = "1.5"
