# You must change these to your own details.
[package]
name = "pentagame_logic"
description = "Pentagame shared logic binds"
version = "0.1.0"
authors = ["Cobalt <https://cobalt.rocks>"]
readme = "README.md"
edition = "2018"

[features]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional. Note that `session` is not a package
# but rather another feature listed in this manifest.
default = ["wasm"]
# A feature with no dependencies is used mainly for conditional compilation,
# like `#[cfg(feature = "go-faster")]`.
wasm = ["wasm-bindgen", "web-sys"]

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = { version = "0.2.68", features = [
    "serde-serialize"
], optional = true }
serde = { version = "1.0", features = ["derive"], default-features = false }
hashbrown = "0.9.1"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]
optional = true

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"


[dev-dependencies]
js-sys = { version = "0.3.22" }
